--- a/package.json
+++ b/package.json
@@ -9,14 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@react-spring/web": "^9.7.5",
-    "@react-three/drei": "^9.117.3",
-    "framer-motion": "^11.5.6",
-    "framer-motion-3d": "^11.11.17",
     "next": "^15.3.1",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "three": "^0.170.0"
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
